<resources>
    <string name="app_name">Momentum</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_following">Following</string>
    <string name="dashboard_add">Add</string>
    <string name="dashboard_sharing">Sharing</string>
    <string name="dashboard_settings">Settings</string>
    <string name="view_all_habits">Habits</string>
    <string name="view_all_habit_events">Habit Events</string>
    <string name="chosen_day_habit_title">Chosen Day Habit</string>
    <string name="home_image_description">design image for home view</string>
    <string name="home_instructions">Get a clear view of your day.\n Click a date to see your habits for that day.\n Tap + to add a habit.</string>
    <string name="day_habits_title_activity">Habits Title</string>
    <string name ="habit_event_title_activity">Habit Events Title</string>
    <string name="done">DONE</string>
    <string name="example_motivation_day_habits">Motivation \n Example motivation</string>
    <string name="example_toast">Example toast</string>
    <string name="add_habit_event_title">Add Event Title</string>
    <string name="day_habits_info_text">Make sure to click DONE to show your progress!</string>
    <string name="add_habit_event_info">Add a habit event to celebrate your progress!</string>
    <string name="add_habit_event_comment">Comment</string>
    <string name="comment_hint">Add an optional comment (up to 20 characters)</string>
    <string name="great_job">Great Job!</string>
    <string name="motivation">Motivation</string>
    <string name ="habit_event_comment">Habit Events Comment</string>
    <string name="frequency">Frequency</string>
    <string name="starting_date">Starting Date</string>
    <string name="privacy">Privacy</string>
    <string name="events">Events</string>
    <string name="title">Title</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="visual">VIEW VISUAL</string>
    <string name="visual_indicator">Visual Indicator</string>
    <string name="choose_a_year">Choose a Year</string>
    <string name="are_you_sure_you_want_to_delete_this_habit">Are you sure you want to delete this habit?</string>
    <string name="delete">DELETE</string>
    <string name="following_name">FOLLOWING NAME</string>
    <string name="uid">uid:</string>
    <string name="search">Search</string>
</resources>